[gd_scene load_steps=3 format=3 uid="uid://c6t8qvobyjkar"]

[ext_resource type="Theme" uid="uid://obicqd30stvj" path="res://UI.tres" id="1_u8iy0"]
[ext_resource type="Script" path="res://scenes/editor/code_window.gd" id="1_wyfry"]

[node name="CodeWindow" type="VBoxContainer" groups=["code_window"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wyfry")

[node name="Editor" type="CodeEdit" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_u8iy0")
wrap_mode = 1
scroll_past_end_of_file = true
minimap_draw = true
highlight_all_occurrences = true
highlight_current_line = true
draw_tabs = true
symbol_lookup_on_click = true
line_folding = true
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true
indent_use_spaces = true
indent_automatic = true
indent_automatic_prefixes = Array[String](["("])
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
auto_brace_completion_pairs = {
"\"": "\"",
"(": ")",
"\\\"": "\\\""
}

[node name="ShowSuggestions" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_pressed = true
text = "Show Suggestions"

[node name="Suggestions" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(1.45519e-11, 200)
layout_mode = 2

[connection signal="caret_changed" from="Editor" to="." method="_on_editor_caret_changed"]
[connection signal="toggled" from="ShowSuggestions" to="Suggestions" method="set_visible"]
